--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id= "instruction"></div>
+
+    <div id= "regulation"></div>
+    <!-- The Modal -->
+<div id="myModal" class="modal"></div>
+
     <div id="height"></div><br>
     <div id="tiles"></div>
     <div id="warning"></div>
